--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline:             "by LEESUYEON"
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  Daily Blog입니다.
+  Daily_Blog입니다.
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
@@ -131,4 +131,11 @@ compress_html:
 sass:
   style:             compressed
 
-
+tipue_search:
+     include:
+         pages: false
+         collections: []
+     exclude:
+         files: [search.html, index.html, tags.html]
+         categories: []
+         tags: []
